--- a/model.ipynb
+++ b/model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +163,7 @@
     }
    ],
    "source": [
-    "data.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "data.head()"
+    "data.drop(columns=['Unnamed: 0'], inplace=True)\n"
    ]
   },
   {
